# python-repo-template

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-docker.yml  test.yml
python_repo_template/: __main__.py
scripts/: style_enforcement.sh
test/: test_python_repo_template.py
